--- a/index.html
+++ b/index.html
@@ -1,42 +1,92 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>HL GROUPE — Création Digitale</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HL GROUPE — Création Digitale & Automatisation</title>
+
+    <!-- Lien CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <header>
-      <h1 class="brand-title">HL GROUPE</h1>
-  </header>
+    <!-- Background vidéo -->
+    <video class="video-bg" autoplay muted loop playsinline>
+        <source src="assets/bg.mp4" type="video/mp4">
+    </video>
 
-  <main>
-      <section class="impact">
-          <h2>Bienvenue ✨</h2>
-          <p>Création digitale. Automation. Stratégie visuelle.</p>
-      </section>
+    <!-- Fallback si la vidéo ne se charge pas -->
+    <div class="fallback-bg"></div>
 
-      <section class="stats">
-          <div class="card">
-              <div class="metric">+40</div>
-              <div class="label">Projets réalisés</div>
-          </div>
-          <div class="card">
-              <div class="metric">+12</div>
-              <div class="label">Clients premium</div>
-          </div>
-          <div class="card">
-              <div class="metric">5⭐</div>
-              <div class="label">Satisfaction</div>
-          </div>
-      </section>
-  </main>
+    <!-- HEADER -->
+    <header>
+        <h1 class="brand-title">HL GROUPE</h1>
+    </header>
 
-  <footer>
-      <p>© 2025 HL GROUPE — Tous droits réservés.</p>
-  </footer>
+    <!-- MAIN -->
+    <main>
+
+        <!-- Impact intro -->
+        <section class="impact">
+            <h2 style="font-size:2rem; font-weight:700;">Création Digitale • Automatisation • Stratégie Vidéo</h2>
+            <p>Nous transformons votre présence digitale avec des expériences modernes, élégantes et performantes.</p>
+        </section>
+
+        <!-- Stats -->
+        <section class="stats">
+            <div class="card">
+                <div class="metric">+120</div>
+                <div class="label">Projets livrés</div>
+            </div>
+
+            <div class="card">
+                <div class="metric">+85</div>
+                <div class="label">Clients accompagnés</div>
+            </div>
+
+            <div class="card">
+                <div class="metric">4.9★</div>
+                <div class="label">Satisfaction Moyenne</div>
+            </div>
+        </section>
+
+        <!-- Team -->
+        <section style="margin-top:60px;">
+            <h2 style="text-align:center; margin-bottom:20px;">Notre équipe</h2>
+
+            <div class="team">
+
+                <div class="card member">
+                    <h3>Hammouda Kadi (Dika)</h3>
+                    <p>Directeur Créatif — Stratégie digitale, automation, design premium.</p>
+                </div>
+
+                <div class="card member">
+                    <h3>Montage & Vidéo</h3>
+                    <p>Création de contenus cinématiques, courts-métrages et vidéos premium.</p>
+                </div>
+
+                <div class="card member">
+                    <h3>Développement Web</h3>
+                    <p>Sites modernes, animations, expériences immersives et optimisées.</p>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <h3>Reste informé</h3>
+        <p>Inscris-toi pour recevoir nos nouveautés, outils et ressources exclusives.</p>
+
+        <form class="form" onsubmit="event.preventDefault(); alert('Merci ! Nous te recontactons très vite.');">
+            <input type="email" placeholder="Votre email" required>
+            <button type="submit">S’inscrire</button>
+        </form>
+    </footer>
 
 </body>
 </html>
